--- a/agents-backend/agents/requirements.txt
+++ b/agents-backend/agents/requirements.txt
@@ -5,7 +5,6 @@ pyyaml
 defog
 snowflake-connector-python
 pandas
-resend
 sqlalchemy
 scipy
 tiktoken
@@ -19,3 +18,4 @@ hypercorn
 colorama
 matplotlib
 seaborn
+redis
