--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,6 @@
-NEXT_PUBLIC_API_ENDPOINT=http://localhost:8000
 NEXT_PUBLIC_AGENTS_ENDPOINT=localhost:1235
 NEXT_PUBLIC_PARTYKIT_ENDPOINT=localhost:2000
 NEXT_PUBLIC_API_KEY=genmab-survival-test
+NEXT_PUBLIC_MSAL_CLIENT_ID=08d036ea-f4fa-4636-b32b-3196bac0bfe7
+NEXT_PUBLIC_MSAL_TENANT_ID=91477b80-6e9d-4a55-bce4-8c2e49d1870f
+NEXT_PUBLIC_MSAL_REDIRECT_URI=http://localhost:1234/msal_redirect
