--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.8.1",
     "@azure/msal-browser": "^3.7.1",
+    "@azure/msal-react": "^2.0.10",
     "@blocknote/core": "^0.11.0",
     "@blocknote/react": "^0.11.0",
     "@dotlottie/react-player": "^1.6.12",
