Add cron job ever 15 mins to delete >15 mins old files

--- a/agents-backend/docker-setup-files/start-python-server.conf
+++ b/agents-backend/docker-setup-files/start-python-server.conf
@@ -6,3 +6,9 @@ stdout_logfile=/agent-logs-out
 stderr_logfile=/agent-logs-err
 killasgroup=true
 stopasgroup=true
+
+[program:cronjob]
+command =/bin/bash -c "cron -f"
+startsecs = 0
+killasgroup=true
+stopasgroup=true
