add new tool go fetch data from global_dict. fix extract-metadata default values

--- a/agents-backend/agents/requirements.txt
+++ b/agents-backend/agents/requirements.txt
@@ -4,7 +4,6 @@ pandas
 pyyaml
 defog>=0.57.0
 snowflake-connector-python
-pandas
 sqlalchemy
 scipy
 tiktoken
@@ -20,3 +19,4 @@ matplotlib
 seaborn
 redis
 openai
+pandasql
