updated docker and build packages

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,30 +1,13 @@
 version: "3"
 services:
-  agents-app:
-    build:
-      context: .
-      # dockerfile: dockerfile.agents-app
-      dockerfile: dockerfile.agents-serve
-    ports:
-      # use a weird port to avoid conflicts with the user's local stuff
-      - "80:80"
-      - "443:443"
-    networks:
-      - agents-network
-
   agents-python-server:
     build:
       context: .
       dockerfile: dockerfile.agents-python-server
       args:
         OPENAI_API_KEY: "${OPENAI_API_KEY:-}"
-    # volumes:
-    # - agents-python-server:/agents-python-server/
-    ports:
-      # we have to expose these ports to allow the browser to acces them
-      # python server
-      - "1235:1235"
     volumes:
+      # persist assets so they are not lost when the container is rebuilt
       - agents-assets:/agents-assets/
 
     networks:
@@ -34,14 +17,6 @@ services:
     build:
       context: .
       dockerfile: dockerfile.agents-partykit
-    ports:
-      # partykit
-      - "1999:1999"
-      # partykit also for nginx redirect
-      - "2000:2000"
-    expose:
-      - "1999"
-      - "2000"
     networks:
       - agents-network
 
@@ -67,6 +42,19 @@ services:
       - agents-network
     volumes:
       - agents-redis:/data
+  
+  agents-nginx:
+    build:
+      context: .
+      dockerfile: dockerfile.agents-nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - agents-python-server
+      - agents-partykit
+    networks:
+      - agents-network
 
 volumes:
   agents-postgres:
