--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 1234",
     "build": "next build",
     "start": "next start -p 1234",
-    "export": "next build && next export",
+    "export": "next build && next export && sh ./export.sh",
     "lint": "next lint"
   },
   "dependencies": {
