fixed nginx config

--- a/dockerfile.agents-partykit
+++ b/dockerfile.agents-partykit
@@ -6,6 +6,12 @@ COPY ./agents-backend/agents/partykit-server ./
 
 RUN npm install
 
-EXPOSE 1999
+RUN apt-get update && apt-get install -y nginx
 
-CMD npx partykit dev
+# copy nginx config
+COPY ./agents-backend/docker-setup-files/nginx.conf /etc/nginx/sites-available/default
+
+EXPOSE 1999
+EXPOSE 2000
+
+CMD service nginx start && npx partykit dev
