--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,9 @@ services:
     build:
       context: .
       dockerfile: dockerfile.agents-partykit
+    ports:
+      - "1999:1999"
+      - "2000:2000"
     networks:
       - agents-network
 
@@ -52,7 +55,6 @@ services:
       - "443:443"
     depends_on:
       - agents-python-server
-      - agents-partykit
     networks:
       - agents-network
 
