--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,7 @@ http {
 
     # serve static files for all .html, .css, .js
     location ~* \.(html|css|js|ico|svg)$ {
+      include /etc/nginx/mime.types;
       root /var/www/html;
       index index.html index.htm;
     }
