added python unbuffered env variable for easier realtime debugging

--- a/agents-backend/agents/.env.yaml
+++ b/agents-backend/agents/.env.yaml
@@ -4,9 +4,7 @@ port: "5432"
 database: "postgres"
 user: "postgres"
 password: "postgres"
-
 api_key: "genmab-survival-test"
-
 redis_server_host: "agents-redis"
-
 report_assets_dir: "/agents-assets/report-assets"
+PYTHONUNBUFFERED: "true"
