added optional connectors for MySQL, Snowflake, and BigQuery in requirements.txt

--- a/agents-backend/agents/requirements.txt
+++ b/agents-backend/agents/requirements.txt
@@ -19,3 +19,6 @@ seaborn
 snowflake-connector-python
 sqlalchemy
 tiktoken
+snowflake-connector-python
+mysql-connector-python
+google-cloud-bigquery
