updated dockerfile so it defaults to localhost:80 if ENDPOINT is not explicitly provided

--- a/dockerfile.agents-nginx
+++ b/dockerfile.agents-nginx
@@ -5,7 +5,7 @@ FROM nginx:latest
 COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
 
 ARG ENDPOINT=""
-ENV ENDPOINT=$ENDPOINT
+ENV ENDPOINT="${ENDPOINT:-localhost:80}"
 
 # copy the build output to replace the default nginx contents
 COPY ./out /var/www/html
