latest blocknote. change placeholder and bring analysis tot he top of slash menu

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 frontend/node_modules
+node_modules
 /.pnp
 .pnp.js
 .yarn/install-state.gz
@@ -10,7 +11,7 @@ frontend/node_modules
 /coverage
 
 # next.js
-frontend/.next/
+frontend/.next
 
 # production
 frontend/build
