fix all code editor issues by using codemirror

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@azure/msal-react": "^2.0.10",
     "@blocknote/core": "^0.12.0",
     "@blocknote/react": "^0.12.0",
+    "@codemirror/lang-python": "^6.1.4",
+    "@codemirror/lang-sql": "^6.6.1",
     "@dotlottie/react-player": "^1.6.12",
     "@marsidev/react-turnstile": "^0.4.1",
     "@notionhq/client": "^2.2.14",
@@ -22,6 +24,7 @@
     "@tiptap/pm": "^2.1.16",
     "@tiptap/react": "^2.1.16",
     "@tiptap/suggestion": "^2.1.16",
+    "@uiw/react-codemirror": "^4.21.24",
     "@uiw/react-textarea-code-editor": "^3.0.2",
     "antd": "^5.12.8",
     "chroma-js": "^2.4.2",
