--- a/dockerfile.agents-python-server
+++ b/dockerfile.agents-python-server
@@ -11,15 +11,15 @@ ENV OPENAI_API_KEY=$OPENAI_API_KEY
 # need cmake for scikit
 RUN apt-get update && apt-get install -y python3-pip cmake supervisor cron
 
-COPY ./agents-backend/src/requirements.txt ./requirements.txt
+COPY ./backend/src/requirements.txt ./requirements.txt
 # install requirements
 RUN pip install -r requirements.txt
 
 # copy deletion cron
-COPY ./agents-backend/docker-setup-files/delete-cron /etc/cron.d/delete-cron
+COPY ./backend/docker-setup-files/delete-cron /etc/cron.d/delete-cron
 
 # copy startup script
-COPY ./agents-backend/docker-setup-files/startup.sh /startup.sh
+COPY ./backend/docker-setup-files/startup.sh /startup.sh
 
 # Give execution rights on the cron job
 RUN chmod 0644 /etc/cron.d/delete-cron
@@ -33,7 +33,7 @@ RUN touch /var/log/cron.log
 # expose python server port
 EXPOSE 1235
 
-COPY ./agents-backend/src/ ./
+COPY ./backend/src/ ./
 
 # create empty report assets dirs
 RUN mkdir -p /agents-assets/report-assets
