moved all environment variables to .env file

--- a/.env
+++ b/.env
@@ -4,3 +4,13 @@ SLACK_BOT_TOKEN="xoxb-4375450252741-7047020658194-njsJMCLUpBadeXAY6FYQzIdX"
 BUTTON_TEXT="Ask Defog"
 ALLOW_UPDATES=YES
 ALLOW_CACHING=YES
+OPENAI_API_KEY=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
+REPORT_ASSETS_DIR="/agents-assets/report-assets"
+DBNAME="postgres"
+HOST="agents-postgres"
+PORT="5432"
+DATABASE="postgres"
+USER="postgres"
+PASSWORD="postgres"
+PYTHONUNBUFFERED="true"
+LLM_CALLS_URL="http://agents-llm-calls:8080"
