changed the name of all db related env variables to prevent confusion

--- a/.env
+++ b/.env
@@ -7,10 +7,10 @@ ALLOW_CACHING=YES
 OPENAI_API_KEY=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
 REPORT_ASSETS_DIR="/agents-assets/report-assets"
 DBNAME="postgres"
-HOST="agents-postgres"
-PORT="5432"
+DBHOST="agents-postgres"
+DBPORT="5432"
 DATABASE="postgres"
-USER="postgres"
-PASSWORD="postgres"
+DBUSER="postgres"
+DBPASSWORD="postgres"
 PYTHONUNBUFFERED="true"
 LLM_CALLS_URL="http://agents-llm-calls:8080"
