use jsconfig path shortcuts for utils anc components

--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -2,6 +2,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "checkJs": true,
+    "paths": {
+      // utils folder ./utils/
+      "$utils/*": ["./utils/*"],
+      "$components/*": ["./components/*"]
+    },
     "jsx": "react-jsx"
   }
 }
