update env template

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,18 @@
 # replace the values here with your own
-DEFOG_API_KEY=
-DEFOG_BASE_URL=https://api.defog.ai
-DEFOG_GENERATE_URL=https://api.defog.ai/generate_query_chat
-GOOGLE_CLIENT_ID=
-SLACK_BOT_TOKEN=
-BUTTON_TEXT=Ask Defog
+DEFOG_API_KEY=123
+GOOGLE_CLIENT_ID=""
+SLACK_BOT_TOKEN=""
+BUTTON_TEXT="Ask Defog"
 ALLOW_UPDATES=YES
+OPENAI_API_KEY=
+REPORT_ASSETS_DIR="/agents-assets/report-assets"
+DBNAME="postgres"
+DBHOST="agents-postgres"
+DBPORT="5432"
+DATABASE="postgres"
+DBUSER="postgres"
+DBPASSWORD="postgres"
+PYTHONUNBUFFERED="true"
+LLM_CALLS_URL=""
+DEFOG_BASE_URL=""
+DEFOG_GENERATE_URL=""
