--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,6 +39,7 @@ services:
       - DBPASSWORD=${DBPASSWORD}
       - PYTHONUNBUFFERED=${PYTHONUNBUFFERED}
       - LLM_CALLS_URL=${LLM_CALLS_URL}
+      - PYTHONDONTWRITEBYTECODE=1
     build:
       context: .
       dockerfile: dockerfile.agents-python-server
