add STRIPE_ACCOUNT_ID and STRIPE_CLIENT_SECRET and env variables

--- a/.env.template
+++ b/.env.template
@@ -20,3 +20,5 @@ INTERNAL_DB="postgres"
 RESEND_API_KEY=""
 LLM_SERVER_ENDPOINT="" # delete this from .env if want to use the OpenAI server
 LLM_MODEL_NAME=""  # delete this from .env if want to use the OpenAI model
+STRIPE_ACCOUNT_ID=""
+STRIPE_CLIENT_SECRET=""
