--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@amcharts/amcharts5": "^5.9.13",
+    "@ant-design/icons": "^5.4.0",
     "@azure/msal-browser": "^3.7.1",
     "@azure/msal-react": "^2.0.10",
     "@blocknote/core": "^0.14.5",
@@ -48,6 +49,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
+    "recharts": "^2.12.7",
     "sass": "^1.69.7",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.3.0",
