updated page lists in nginx confs

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_AGENTS_ENDPOINT=https://demo.defog.ai
-NEXT_PUBLIC_API_KEY_NAMES="Manufacturing,Restaurants"
+NEXT_PUBLIC_AGENTS_ENDPOINT=http://localhost
+NEXT_PUBLIC_API_KEY_NAMES="Demo,Manufacturing"
 NEXT_PUBLIC_ALLOW_UPDATES=YES
 NEXT_PUBLIC_ALLOW_CACHING=YES
