--- a/nginx/nginx_local.conf
+++ b/nginx/nginx_local.conf
@@ -20,7 +20,7 @@ http {
     }
 
     # for the /doc, /extract-metadata, /manage-users, /msal_redirect locations, serve via static server
-    location ~* /(doc|log-in|extract-metadata|view-notebooks|manage-users|msal_redirect|query-data|align-model) {
+    location ~* /(doc|log-in|extract-metadata|view-notebooks|manage-users|msal_redirect|query-data|align-model|check-readiness|manage-tools) {
       root /var/www/html;
       index index.html index.htm;
       add_header Content-Type text/html;
