various fixes - Shift oracle data model from sqlite to postgres by putting schema in schema.sql - Added base class validation - Shift oracle_reports and oracle_clarifications into postgres - Fixed startup command (removed unused ENDPOINT env var) - Fixed wrong sqlite3 dependency

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,7 @@ pandasql
 pgvector
 pika
 psycopg2-binary
+pysqlite3
 pyyaml
 redshift_connector
 requests
@@ -28,7 +29,6 @@ seaborn
 slack_sdk
 snowflake-connector-python
 sqlalchemy
-sqlite3
 statsmodels
 tabulate
 tiktoken
