Add Celery - add redis container for celery - remove unused openai_api_key env var in dockerfile.agents-python-server - install netcat in agents-python-server for checking if redis is up - update python server requirements (rm pysqlite3, add celery) - update startup.sh to check for agents-redis container before starting celery app

--- a/.env.template
+++ b/.env.template
@@ -13,6 +13,8 @@ DBPORT="5432"
 DATABASE="postgres"
 DBUSER="postgres"
 DBPASSWORD="postgres"
+REDIS_EXTERNAL_PORT="16379" # for accessing redis from outside the docker network
+REDIS_INTERNAL_PORT="6379"  # for accessing redis from inside the docker network
 PYTHONUNBUFFERED="true"
 LLM_CALLS_URL=""
 DEFOG_BASE_URL=""
