--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,7 @@ services:
       - DATABASE=${DATABASE}
       - DBUSER=${DBUSER}
       - DBPASSWORD=${DBPASSWORD}
+      - REDIS_INTERNAL_PORT=${REDIS_INTERNAL_PORT}
       - PYTHONUNBUFFERED=${PYTHONUNBUFFERED}
       - LLM_CALLS_URL=${LLM_CALLS_URL}
       - PYTHONDONTWRITEBYTECODE=1
@@ -93,10 +94,22 @@ services:
     networks:
       - agents-network
 
+  agents-redis:
+    image: redis:7-alpine
+    networks:
+      - agents-network
+    ports:
+      - "${REDIS_EXTERNAL_PORT}:${REDIS_INTERNAL_PORT}"
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 256M
+
 volumes:
   agents-postgres:
   agents-assets:
 
+
 networks:
-  agents-network:
-# curl --header "Content-Type: application/json"  --data '{"request_type": "ping"}' http://localhost:80/llm-calls/
+  agents-network: # curl --header "Content-Type: application/json"  --data '{"request_type": "ping"}' http://localhost:80/llm-calls/
