add special handling for icon file

--- a/nginx/nginx_local.conf
+++ b/nginx/nginx_local.conf
@@ -12,6 +12,12 @@ http {
       index index.html index.htm;
     }
 
+    # serve the file logo512.png via root server
+    location = /logo512.png {
+      root /var/www/html;
+      index logo512.png;
+    }
+
     # serve static files for all .html, .css, .js
     location ~* \.(html|css|js|ico|svg)$ {
       include /etc/nginx/mime.types;
