--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -60,7 +60,7 @@ services:
     ports:
       - "1235:1235"
     volumes:
-      - agents-assets:/agents-assets/
+      - ./agents-assets:/agents-assets
       - ./backend:/backend
     depends_on:
       - agents-partykit
@@ -116,7 +116,6 @@ services:
 
 volumes:
   agents-postgres:
-  agents-assets:
   redis-data:
 
 
