add defaults for internal postgres, also rename variables like `DBNAME` to `DEFOG_DBNAME` to prevent clashes with local variables

--- a/.env.template
+++ b/.env.template
@@ -7,12 +7,12 @@ BUTTON_TEXT="Ask Defog"
 ALLOW_UPDATES=YES
 OPENAI_API_KEY=
 ANALYSIS_ASSETS_DIR="/agents-assets/analysis-assets"
-DBNAME="postgres"
-DBHOST="agents-postgres"
-DBPORT="5432"
-DATABASE="postgres"
-DBUSER="postgres"
-DBPASSWORD="postgres"
+DEFOG_DBNAME="postgres"
+DEFOG_DBHOST="agents-postgres"
+DEFOG_DBPORT="5432"
+DEFOG_DATABASE="postgres"
+DEFOG_DBUSER="postgres"
+DEFOG_DBPASSWORD="postgres"
 REDIS_EXTERNAL_PORT="16379" # for accessing redis from outside the docker network
 REDIS_INTERNAL_PORT="6379"  # for accessing redis from inside the docker network
 PYTHONUNBUFFERED="true"
