--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,12 +24,12 @@ services:
       - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - ANALYSIS_ASSETS_DIR=${ANALYSIS_ASSETS_DIR}
-      - DBNAME=${DBNAME}
-      - DBHOST=${DBHOST}
-      - DBPORT=${DBPORT}
-      - DATABASE=${DATABASE}
-      - DBUSER=${DBUSER}
-      - DBPASSWORD=${DBPASSWORD}
+      - DBNAME=${DEFOG_DBNAME:-postgres}
+      - DBHOST=${DEFOG_DBHOST:-agents-postgres}
+      - DBPORT=${DEFOG_DBPORT:-5432}
+      - DATABASE=${DEFOG_DATABASE:-postgres}
+      - DBUSER=${DEFOG_DBUSER:-postgres}
+      - DBPASSWORD=${DEFOG_DBPASSWORD:-postgres}
       - REDIS_INTERNAL_PORT=${REDIS_INTERNAL_PORT}
       - PYTHONUNBUFFERED=${PYTHONUNBUFFERED}
       - LLM_CALLS_URL=${LLM_CALLS_URL}
