--- a/dockerfile.agents-python-server
+++ b/dockerfile.agents-python-server
@@ -24,5 +24,27 @@ RUN touch /agent-logs-out
 
 ENV PYTHONUNBUFFERED=true
 
+# Set the environment variables (avoid prompts during installations)
+ENV ACCEPT_EULA=Y
+ENV DEBIAN_FRONTEND=noninteractive
+
+# Install utilities and prerequisites
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  gnupg \
+  curl \
+  ca-certificates \
+  unixodbc-dev
+
+# Add the Microsoft repository key and repository
+RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
+  && curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list > /etc/apt/sources.list.d/mssql-release.list
+
+# Install SQL Server ODBC Driver
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  msodbcsql18
+
+# Cleanup
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+
 # start startup script
 CMD sh ./startup.sh
