Complete Context Gathering - complete final part of context gathering - handle errors from /unstructured_data/combine_summaries call - add utils_logging for standardized timing functions - add logger to celery worker - parse `LOG_LEVEL` from .env - update generate button on frontend to enable only when userTask is reasonably long and the taskType has been inferred.

--- a/docker-compose-hub.yaml
+++ b/docker-compose-hub.yaml
@@ -31,6 +31,7 @@ services:
       - DBPASSWORD=${DEFOG_DBPASSWORD:-postgres}
       - REDIS_INTERNAL_PORT=${REDIS_INTERNAL_PORT}
       - PYTHONUNBUFFERED=${PYTHONUNBUFFERED}
+      - LOG_LEVEL=${LOG_LEVEL}
       - LLM_CALLS_URL=${LLM_CALLS_URL}
       - PYTHONDONTWRITEBYTECODE=1
       - PYTHONPATH=/backend
