--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,7 @@ services:
       - DBPASSWORD=${DEFOG_DBPASSWORD:-postgres}
       - REDIS_INTERNAL_PORT=${REDIS_INTERNAL_PORT}
       - PYTHONUNBUFFERED=${PYTHONUNBUFFERED}
+      - LOG_LEVEL=${LOG_LEVEL}
       - LLM_CALLS_URL=${LLM_CALLS_URL}
       - PYTHONDONTWRITEBYTECODE=1
       - PYTHONPATH=/backend
