added LOG_LEVEL to .env.template

--- a/.env.template
+++ b/.env.template
@@ -16,6 +16,7 @@ DEFOG_DBPASSWORD="postgres"
 REDIS_EXTERNAL_PORT="16379" # for accessing redis from outside the docker network
 REDIS_INTERNAL_PORT="6379"  # for accessing redis from inside the docker network
 PYTHONUNBUFFERED="true"
+LOG_LEVEL="info" # set to debug if you want to see debug logs
 LLM_CALLS_URL="https://api.defog.ai/agent_endpoint"
 DEFOG_BASE_URL="https://api.defog.ai"
 DEFOG_GENERATE_URL="https://api.defog.ai/generate_query_chat"
