--- a/docker-compose-hub.yaml
+++ b/docker-compose-hub.yaml
@@ -40,7 +40,10 @@ services:
       - LLM_MODEL_NAME=${LLM_MODEL_NAME}
       - STRIPE_ACCOUNT_ID=${STRIPE_ACCOUNT_ID}
       - STRIPE_CLIENT_SECRET=${STRIPE_CLIENT_SECRET}
+
+      # Email configuration
       - EMAIL_OPTION=${EMAIL_OPTION:-DEFOG}
+      - FROM_EMAIL=${FROM_EMAIL}
       - RESEND_API_KEY=${RESEND_API_KEY}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
