--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,12 +37,14 @@ services:
       - PYTHONDONTWRITEBYTECODE=1
       - PYTHONPATH=/backend
       - INTERNAL_DB=${INTERNAL_DB:-postgres}
-      - FROM_EMAIL=${FROM_EMAIL}
       - LLM_SERVER_ENDPOINT=${LLM_SERVER_ENDPOINT}
       - LLM_MODEL_NAME=${LLM_MODEL_NAME}
       - STRIPE_ACCOUNT_ID=${STRIPE_ACCOUNT_ID}
       - STRIPE_CLIENT_SECRET=${STRIPE_CLIENT_SECRET}
+
+      # Email configuration
       - EMAIL_OPTION=${EMAIL_OPTION:-DEFOG}
+      - FROM_EMAIL=${FROM_EMAIL}
       - RESEND_API_KEY=${RESEND_API_KEY}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
