Use different db for parsed_tables data

--- a/.env.template
+++ b/.env.template
@@ -7,12 +7,14 @@ BUTTON_TEXT="Ask Defog"
 ALLOW_UPDATES=YES
 OPENAI_API_KEY=
 ANALYSIS_ASSETS_DIR="/agents-assets/analysis-assets"
+INTERNAL_DB="postgres"
 DEFOG_DBNAME="postgres"
 DEFOG_DBHOST="agents-postgres"
 DEFOG_DBPORT="5432"
 DEFOG_DATABASE="postgres"
 DEFOG_DBUSER="postgres"
 DEFOG_DBPASSWORD="postgres"
+PARSED_TABLES_DBNAME="parsed_tables" # used to store the parsed tables data. should be different from DEFOG_DBNAME
 REDIS_EXTERNAL_PORT="16379" # for accessing redis from outside the docker network
 REDIS_INTERNAL_PORT="6379"  # for accessing redis from inside the docker network
 PYTHONUNBUFFERED="true"
@@ -20,7 +22,6 @@ LOG_LEVEL="info" # set to debug if you want to see debug logs
 LLM_CALLS_URL="https://api.defog.ai/agent_endpoint"
 DEFOG_BASE_URL="https://api.defog.ai"
 DEFOG_GENERATE_URL="https://api.defog.ai/generate_query_chat"
-INTERNAL_DB="postgres"
 RESEND_API_KEY=""
 FROM_EMAIL=""
 LLM_SERVER_ENDPOINT="" # delete this from .env if want to use the OpenAI server
