work with scenarios where PARSED_TABLES_DBNAME might not be defined

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
       - DATABASE=${DEFOG_DATABASE:-postgres}
       - DBUSER=${DEFOG_DBUSER:-postgres}
       - DBPASSWORD=${DEFOG_DBPASSWORD:-postgres}
-      - PARSED_TABLES_DBNAME=${PARSED_TABLES_DBNAME}
+      - PARSED_TABLES_DBNAME=${PARSED_TABLES_DBNAME:-postgres}
       - REDIS_INTERNAL_PORT=${REDIS_INTERNAL_PORT}
       - PYTHONUNBUFFERED=${PYTHONUNBUFFERED}
       - LOG_LEVEL=${LOG_LEVEL:-info}
