--- a/docker-compose-hub.yaml
+++ b/docker-compose-hub.yaml
@@ -15,6 +15,7 @@ services:
   agents-python-server:
     image: defogai/agents-python-server:latest
     environment:
+      - DEFOG_API_KEY=${DEFOG_API_KEY} # for backwards compatibility. avoid using DEFOG_API_KEY going forward due to potential conflicts with usage in defog-python
       - DEFOG_API_KEYS=${DEFOG_API_KEYS}
       - DEFOG_API_KEY_NAMES=${DEFOG_API_KEY_NAMES}
       - DEFOG_BASE_URL=${DEFOG_BASE_URL:-https://api.defog.ai}
