--- a/dockerfile.agents-python-server
+++ b/dockerfile.agents-python-server
@@ -4,7 +4,7 @@ FROM python:3.10
 WORKDIR /backend
 
 # need cmake for scikit
-RUN apt-get update && apt-get install -y python3-pip cmake netcat-openbsd
+RUN apt-get update && apt-get install -y python3-pip cmake netcat-openbsd wkhtmltopdf
 
 COPY ./backend/requirements.txt ./requirements.txt
 
