--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     networks:
       - agents-network
     ports:
-      - "${RABBITMQ_PORT}:5672"
+      - "${RABBITMQ_PORT:-15672}:5672"
     volumes:
       - agents-rabbitmq:/var/lib/rabbitmq
     deploy:
@@ -57,7 +57,7 @@ services:
       - GOOGLE_ANALYTICS_CREDS_PATH=${GOOGLE_ANALYTICS_CREDS_PATH}
       - GOOGLE_ANALYTICS_PROPERTY_IDS=${GOOGLE_ANALYTICS_PROPERTY_IDS}
       - RABBITMQ_HOST=${RABBITMQ_HOST:-agents-rabbitmq}
-      - RABBITMQ_PORT=${RABBITMQ_PORT}
+      - RABBITMQ_PORT=${RABBITMQ_PORT:-15672}
 
       # Email configuration
       - EMAIL_OPTION=${EMAIL_OPTION:-DEFOG}
