--- a/docker-compose-hub.yaml
+++ b/docker-compose-hub.yaml
@@ -12,18 +12,6 @@ services:
     networks:
       - agents-network
 
-  agents-rabbitmq:
-    image: rabbitmq:3-alpine
-    networks:
-      - agents-network
-    volumes:
-      - agents-rabbitmq:/var/lib/rabbitmq
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 512M
-
   agents-python-server:
     image: defogai/agents-python-server:latest
     environment:
@@ -55,7 +43,6 @@ services:
       - GOOGLE_ANALYTICS_CREDS_PATH=${GOOGLE_ANALYTICS_CREDS_PATH}
       - GOOGLE_ANALYTICS_PROPERTY_IDS=${GOOGLE_ANALYTICS_PROPERTY_IDS}
       - RABBITMQ_HOST=${RABBITMQ_HOST}
-      - RABBITMQ_PORT=${RABBITMQ_PORT:-5672}
 
 
       # Email configuration
@@ -88,17 +75,21 @@ services:
   agents-redis:
     image: redis:7-alpine
     command: >
-      redis-server --maxmemory 256mb --maxmemory-policy allkeys-lru
+      redis-server --maxmemory 128mb --maxmemory-policy allkeys-lru
     volumes:
       - agents-redis:/data
     networks:
       - agents-network
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+          memory: 128M
 
 volumes:
   agents-postgres:
   agents-assets:
   agents-redis:
-  agents-rabbitmq:
 
 networks:
   agents-network:
