--- a/dockerfile.agents-python-server-export
+++ b/dockerfile.agents-python-server-export
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y python3-pip cmake netcat-openbsd
 
 COPY ./backend /backend
 
-RUN pip install -r /backend/requirements.txt
+RUN pip install -r /backend/requirements_export.txt
 
 # expose python server port
 EXPOSE 1235
@@ -33,8 +33,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   gnupg \
   curl \
   ca-certificates \
-  unixodbc-dev \
-  wkhtmltopdf
+  unixodbc-dev
 
 # Add the Microsoft repository key and repository
 RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
@@ -48,4 +47,4 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # start startup script
-CMD sh ./startup.sh
+CMD sh ./startup_export.sh
