add ANALYZE_DATA environment variable to enable data analysis

--- a/docker-compose-hub.yaml
+++ b/docker-compose-hub.yaml
@@ -42,6 +42,7 @@ services:
       - STRIPE_CLIENT_SECRET=${STRIPE_CLIENT_SECRET}
       - GOOGLE_ANALYTICS_CREDS_PATH=${GOOGLE_ANALYTICS_CREDS_PATH}
       - GOOGLE_ANALYTICS_PROPERTY_IDS=${GOOGLE_ANALYTICS_PROPERTY_IDS}
+      - ANALYZE_DATA=${ANALYZE_DATA:-no}
 
       # Email configuration
       - EMAIL_OPTION=${EMAIL_OPTION:-DEFOG}
