--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,6 +56,7 @@ services:
       - RABBITMQ_HOST=${RABBITMQ_HOST:-agents-rabbitmq}
       - ORACLE_ENABLED=yes
       - ANALYZE_DATA=${ANALYZE_DATA:-no}
+      - ANALYZE_DATA_MODEL=${ANALYZE_DATA_MODEL:-defog}
 
       # Email configuration
       - EMAIL_OPTION=${EMAIL_OPTION:-DEFOG}
