Refactor charting in explore - replace get_chart_type and plot_chart with get_chart_fn and run_chart_fn for getting the appropriate seaborn function and run it with the params selected by an LLM (from DBP). this removes all final references to agents.planner_executor.tools.plotting*   - when getting the chart type, we need separate summaries of the data frame for numeric vs categorical columns, hence the split in get_chart_fn - use question id for chart file name for brevity and easier tracing - add stub for VLM inspection and retries - fix bug when getting link in gather_context - pin charting libraries' versions - lint

--- a/backend/requirements_export.txt
+++ b/backend/requirements_export.txt
@@ -8,7 +8,7 @@ google-auth
 google-cloud-bigquery
 httpx
 hypercorn
-matplotlib
+matplotlib==3.9.2
 mysql-connector-python
 numpy
 pandas
@@ -22,7 +22,7 @@ redshift_connector
 requests
 resend
 scipy
-seaborn
+seaborn==0.13.2
 slack_sdk
 snowflake-connector-python
 sqlalchemy
