--- a/dockerfile.agents-python-server
+++ b/dockerfile.agents-python-server
@@ -1,5 +1,5 @@
 # builds image for the agents backend
-FROM python:3.10
+FROM python:3.11-slim
 
 WORKDIR /backend
 
@@ -9,8 +9,9 @@ RUN apt-get update && apt-get install -y python3-pip cmake netcat-openbsd wkhtml
 COPY ./backend/requirements_export.txt /root/requirements_export.txt
 COPY ./backend/requirements_oracle.txt /root/requirements_oracle.txt
 
-RUN pip install -r /root/requirements_export.txt
-RUN pip install -r /root/requirements_oracle.txt
+RUN pip install --upgrade pip setuptools && \
+  pip install -r /root/requirements_export.txt && \
+  pip install -r /root/requirements_oracle.txt
 
 # expose python server port
 EXPOSE 1235
